--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Figtree">
 </head>
-<body>
+<body class="bg-[#faf7eb]">
   <app-root></app-root>
 </body>
 </html>
