--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body class="bg-[#faf7eb]">
   <app-root></app-root>
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 </body>
 </html>
