--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-critters-container>
 <head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <meta charset="utf-8">
-  <title>Client</title>
+  <title> | Commcat</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
@@ -11,5 +11,5 @@
 <body class="bg-[#faf7eb]">
   <app-root></app-root>
   <script src="https://checkout.stripe.com/checkout.js"></script>
-<script src="runtime.b046aa35e771628b.js" type="module"></script><script src="polyfills.f878e0fda5a38efc.js" type="module"></script><script src="main.a53fb7a95d79f231.js" type="module"></script></body>
+<script src="runtime.aeca3bf7f1d857cc.js" type="module"></script><script src="polyfills.f878e0fda5a38efc.js" type="module"></script><script src="main.a53fb7a95d79f231.js" type="module"></script></body>
 </html>
